<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Hutch_Valves" Id="{5ddb466e-44cc-4224-86e4-d5a4b2428cea}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	
(*  Beamline Windows Valve *)

	MR2K4_KBO_VWC_01 : FB_VGC;
	
	MR3K4_KBO_VWC_01 : FB_VGC;
	
	LI3K4_IP1_VWC_01 : FB_VGC;
	
	PC5K4_KBO_VWC_01 : FB_VGC;
	
	MR4K4_KBO_VWC_01 : FB_VGC;
	
	MR5K4_KBO_VWC_01 : FB_VGC;
	
	TM2K4_KBO_VWC_01 : FB_VGC;
	
(*  Roughing valve *)	

	TMO_ROUGH1_VRC_01 : FB_VRC;
	TMO_ROUGH1_VRC_02 : FB_VRC;
	TMO_ROUGH2_VRC_01 : FB_VRC;

(* MKS248 with MKS1249 solenoid driver *)

     TMO_ROUGH1_VFV_01 : FB_MKS248;
	 TMO_ROUGH1_VFV_02 : FB_MKS248;
	 TMO_ROUGH1_VFV_03 : FB_MKS248;
	 TMO_ROUGH2_VFV_01 : FB_MKS248;
	 

	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>