<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_Hutch_Beamline_Valves" Id="{ad03d7af-b77d-4459-ab88-d78a941b69c0}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_Hutch_Beamline_Valves
VAR
	LAMP_C2_GCC_01: FB_MKS500; // wrong. only need temporary before integrate with LAMP 
	
	xValveFault: BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
(* Beamline window valves use VGC function. Valves allow to open when both upstream and downstream gauges
    reading pressure below than setpoints and all turbo pumps are running and no faults *)
	

MR2K4_KBO_VWC_01(
				i_stUSG := PC4K4_XTES_GCC_01.IG, 
				i_stDSG:= MR2K4_KBO_GCC_01.IG, 
				i_xDis_DPIlk := FALSE, 
				i_xEPS_OK := TRUE,
				i_xPMPS_OK := TRUE, 
				i_xExt_OK := F_Turbos_isRunning, 
				i_xOverrideMode := xSystemOverrideMode_FEE, 
				i_xReset := xReset_PMPS_FFO2,
				io_fbFFHWO :=g_FastFaultOutput2,
                fbArbiter := g_fbArbiter1);


MR3K4_KBO_VWC_01(
				i_stUSG := MR2K4_KBO_GCC_01.IG, 
				i_stDSG:= PA1K4_IP1_GCC_01.IG, 
				i_xDis_DPIlk := FALSE, 
				i_xEPS_OK := TRUE,
				i_xPMPS_OK := TRUE, 
				i_xExt_OK := F_Turbos_isRunning, 
				i_xOverrideMode := xSystemOverrideMode_FEE, 
				i_xReset := xReset_PMPS_FFO2,
				io_fbFFHWO :=g_FastFaultOutput2,
                fbArbiter := g_fbArbiter1);

LI3K4_IP1_VWC_01(
				i_stUSG := LAMP_C2_GCC_01.IG, 
				i_stDSG:= IM5K4_PPM_GCC_01.IG, 
				i_xDis_DPIlk := FALSE, 
				i_xEPS_OK := TRUE,
				i_xPMPS_OK := TRUE, 
				i_xExt_OK := F_Turbos_isRunning, 
				i_xOverrideMode := xSystemOverrideMode_FEE, 
				i_xReset := xReset_PMPS_FFO2,
				io_fbFFHWO :=g_FastFaultOutput2,
                fbArbiter := g_fbArbiter1);

PC5K4_KBO_VWC_01(
				i_stUSG := IM5K4_PPM_GCC_01.IG, 
				i_stDSG:= PA2K4_IP1_GCC_01.IG, 
				i_xDis_DPIlk := FALSE, 
				i_xEPS_OK := TRUE,
				i_xPMPS_OK := TRUE, 
				i_xExt_OK := F_Turbos_isRunning, 
				i_xOverrideMode := xSystemOverrideMode_FEE, 
				i_xReset := xReset_PMPS_FFO2,
				io_fbFFHWO :=g_FastFaultOutput2,
                fbArbiter := g_fbArbiter1);

MR4K4_KBO_VWC_01(
				i_stUSG := PA2K4_IP1_GCC_01.IG, 
				i_stDSG:= MR4K4_KBO_GCC_01.IG, 
				i_xDis_DPIlk := FALSE, 
				i_xEPS_OK := TRUE,
				i_xPMPS_OK := TRUE, 
				i_xExt_OK := F_Turbos_isRunning, 
				i_xOverrideMode := xSystemOverrideMode_FEE, 
				i_xReset := xReset_PMPS_FFO2,
				io_fbFFHWO :=g_FastFaultOutput2,
                fbArbiter := g_fbArbiter1);
	
(*  if any beamline valve closed due to interlock failure, we close all beamline valve, and send out failure state *)
(*  MR4K4 and MR5K4 valves are missing since they are not installed yet *)

IF ( NOT MR2K4_KBO_VWC_01.iq_stValve.xOPN_OK AND NOT MR2K4_KBO_VWC_01.iq_stValve.i_xOpnLS ) OR 
   ( NOT MR3K4_KBO_VWC_01.iq_stValve.xOPN_OK AND NOT MR3K4_KBO_VWC_01.iq_stValve.i_xOpnLS ) OR 
   ( NOT LI3K4_IP1_VWC_01.iq_stValve.xOPN_OK AND NOT LI3K4_IP1_VWC_01.iq_stValve.i_xOpnLS ) OR 
   ( NOT PC5K4_KBO_VWC_01.iq_stValve.xOPN_OK AND NOT PC5K4_KBO_VWC_01.iq_stValve.i_xOpnLS )  

THEN
	MR2K4_KBO_VWC_01.iq_stValve.pv_xOPN_SW := FALSE;
	MR3K4_KBO_VWC_01.iq_stValve.pv_xOPN_SW := FALSE;
	LI3K4_IP1_VWC_01.iq_stValve.pv_xOPN_SW := FALSE;
	PC5K4_KBO_VWC_01.iq_stValve.pv_xOPN_SW := FALSE;
	MR4K4_KBO_VWC_01.iq_stValve.pv_xOPN_SW := FALSE;
	xValveFault := TRUE;
ELSE
	xValveFault := FALSE;
END_IF


							   
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>